# CrabTrap

./: .gitignore  Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: chunk.rs  error.rs  ids.rs  lib.rs  observation.rs
crates/embeddings/: Cargo.toml
crates/store/: Cargo.toml
crates/store/migrations/: 20251214235000_init.sql
crates/store/src/: error.rs  lib.rs  postgres.rs
